--- a/mapstyle.css
+++ b/mapstyle.css
@@ -81,6 +81,7 @@ body {
   text-align: right;
 }
 
+/*BuTTONS*/
 .button-container {
   display: flex;
   justify-content: space-between;
@@ -120,11 +121,11 @@ body {
 
 .marker-text {
   position: absolute;
-  bottom: 30px; /*position inside the pin*/
+  bottom: 30px;
   width: 100%;
   font-size: 11px;
   font-weight: bold;
-  color: #FFFFFF; /*Adjust text color*/
+  color: #FFFFFF;
   text-align: center;
   border-radius: 5px; 
 }
